Structure & Styles for first couple sections

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -36,17 +36,44 @@
   .logo {
     font-size: 1rem;
     text-transform: uppercase;
-    font-weight: 300;
+    font-weight: 500;
+    background: $gradient-silver-text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
   }
 
   .nav-list {
     display: flex;
     gap: 1.5rem;
-    font-weight: 300;
-    font-size: 0.85rem;
+
+    a {
+      position: relative;
+      color: $color-text;
+      font-weight: 300;
+      font-size: 0.85rem;
+      padding-bottom: 1.5px;
+
+      &::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        height: 2px;
+        width: 100%;
+        background-color: $color-text;
+        transform: scaleX(0);
+        transform-origin: left;
+        transition: transform 0.3s ease;
+      }
+
+      &:hover::after {
+        transform: scaleX(1);
+      }
+    }
   }
 
-  @media (min-width: 480px) {
+  @media (min-width: 500px) {
     .nav-list {
       gap: 1rem;
       flex-wrap: wrap;
@@ -60,6 +87,6 @@
   margin-top: 4rem;
   padding: 2rem 0;
   text-align: center;
-  background-color: $color-muted;
-  color: $color-primary;
+  background-color: lightgray;
+  color: red;
 }
