--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,5 +1,12 @@
 @use './variables' as *;
 
+@mixin gradient-heading {
+  background: $gradient-silver-text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
 html,
 body {
   height: 100%;
@@ -11,7 +18,7 @@ body {
   font-family: $font-body;
   line-height: 1.6;
   font-size: 1rem;
-  color: $color-primary;
+  color: $color-text;
 }
 
 h1,
@@ -23,18 +30,78 @@ h6 {
   font-family: $font-heading;
   font-weight: 500;
   line-height: 1.2;
+  text-transform: uppercase;
+  margin-bottom: $spacing-unit;
+
+  .gradient-text {
+    @include gradient-heading;
+  }
 }
 
 a {
   color: $color-text;
   text-decoration: none;
-
-  &:hover {
-    text-decoration: underline;
-  }
 }
 
 img {
   max-width: 100%;
   display: block;
+}
+
+.button {
+  display: inline-block;
+  padding: 0.75rem 1.5rem;
+  border: 2px solid;
+  border-image: $button-gradient 1;
+  color: $color-text;
+  background: transparent;
+  font-weight: 400;
+  position: relative;
+  overflow: hidden;
+  border-radius: 0.5rem;
+  transition: transform 0.3s ease;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: $button-gradient;
+    opacity: 0.1;
+    transition: left 0.4s ease;
+  }
+
+  &:hover::before {
+    left: 0;
+  }
+}
+
+.read-more-button {
+  background: none;
+  border: none;
+  font-weight: 500;
+  font-size: 1rem;
+  cursor: pointer;
+  background: $gradient-silver-text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  transition: opacity 0.3s ease;
+
+  &:hover {
+    opacity: 0.8;
+  }
+}
+
+.code-tag {
+  font-family: $font-code;
+  background-color: $color-code-bg;
+  color: $color-code-text;
+  padding: 0.2rem 0.5rem;
+  border-radius: 0.25rem;
+  font-size: 0.85rem;
+  display: inline-block;
+  margin-bottom: 0.75rem;
 }
