--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -1,3 +1,5 @@
+@use './variables' as *;
+
 .hero-section {
   display: flex;
   flex-direction: column;
@@ -5,6 +7,7 @@
   padding: 4rem 0;
   position: relative;
   overflow: hidden;
+  border-bottom: 1px solid $border-color;
 
   .hero-grid {
     display: flex;
@@ -22,13 +25,18 @@
 
 .hero-text {
   flex: 1;
-  h2 {
-    font-size: 2.5rem;
-    margin-bottom: 1rem;
-    color: green;
+  text-align: center;
+
+  h1 {
+    font-size: 2.2rem;
+    text-transform: uppercase;
   }
-  p {
-    font-size: 1.25rem;
+
+  .intro-text {
+    font-size: 1.1rem;
+    font-weight: 300;
+    color: $color-text;
+    margin-bottom: 2rem;
   }
 }
 
@@ -55,7 +63,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to right, #1e1e2f 0%, #1e1e2f00 20%);
+    background: linear-gradient(to right, $color-bg 0%, #1e1e2f00 20%);
   }
 
   &::after {
@@ -63,6 +71,6 @@
     bottom: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to top, #1e1e2f 0%, #1e1e2f00 40%);
+    background: linear-gradient(to top, $color-bg 0%, #1e1e2f00 40%);
   }
 }
